# memwarden

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml  turbovec-release.yml
benchmark/: backends.ts  cold-rebuild.ts  recall.ts
demo/: firewall.ts  trust.ts
docs/: HOW-IT-WORKS.md  RELEASE-turbovec.md  architecture.md  benchmarks.md  configuration.md  fleet-mode.md  limitations.md
eval/: firewall-eval.ts
native/turbovec-node/: .gitignore  Cargo.toml  LICENSE  README.md  index.d.ts  index.js  package-lock.json  package.json
native/turbovec-node/src/: lib.rs
site/: index.html
src/: index.ts
src/bundle/: bundle.ts
src/cli/: adopt.ts  bin.ts  connect.ts  hook.ts  host-hooks.ts  running.ts  tools.ts
src/daemon/: ensure.ts  service.ts
src/embedding/: index.ts  local-embedding.ts  runtime.ts
src/functions/: access-tracker.ts  audit.ts  cjk-segmenter.ts  compress-synthetic.ts  config.ts  conflicts.ts  consolidate.ts  context.ts  dedup.ts  dejafix.ts  doctor.ts  forget.ts  git-identity.ts  handoff.ts  hybrid-search.ts  index.ts  injection-format.ts  keyed-mutex.ts  logger.ts  memory-utils.ts  observe.ts  paths.ts  privacy.ts  provenance.ts  quantized-vector-index.ts  receipt.ts  search-index.ts  search.ts  stemmer.ts  synonyms.ts  turboquant.ts  turbovec-backend.ts  types.ts  vector-backend.ts  vector-index.ts  vector-persistence.ts  verify.ts  why.ts
src/kernel/: http.ts  index.ts  kernel.ts  pubsub.ts  types.ts
src/mcp/: bin.ts  server.ts
src/observability/: metrics.ts
src/proxy/: server.ts
src/state/: kv.ts  oplog.ts  schema.ts  store-libsql.ts  store-memory.ts  store.ts
src/triggers/: api.ts  auth.ts
test/: adopt.test.ts  audit.test.ts  bundle.test.ts  conflicts.test.ts  connect.test.ts  consolidate.test.ts  dejafix.test.ts  doctor.test.ts  e2e.test.ts  embedding-runtime.test.ts  embedding.test.ts  erase-compact.test.ts  forget.test.ts  functions.core.test.ts  git-identity.test.ts  hook-conformance.test.ts  hook.test.ts  host-hooks.test.ts  http-security.test.ts  injection-controls.test.ts  injection-format.test.ts  kernel.integration.test.ts  kernel.test.ts  kv-parity.test.ts  mcp.test.ts  metrics.test.ts  observe-session-mismatch.test.ts  oplog.test.ts  paths.test.ts  provenance-urls.test.ts  proxy.test.ts  quant-bench.test.ts  quant-hybrid.test.ts  quantized-vector-index.test.ts  rebuild-batch.test.ts  receipt.test.ts  reliability.e2e.test.ts  restart-ordering.test.ts  running.test.ts  scope-target.test.ts  (+14 more)
